[tool.poetry]
name = "lgm_shapes_test"
version = "0.0.2"
description = "Library of code for woring with shapes"
authors = ["Lmooney25 <liammooney50@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
black = "^22.8.0"
python-semantic-release = "^7.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default